chore(render): deploy server to Singapore region and fix entrypoint
Set region to singapore for lower latency, move project root to src/vnstock_mcp, and adjust start command to run server.py from new root directory

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: vnstock-mcp-server
     env: python
     plan: free
+    region: singapore
+    rootDir: src/vnstock_mcp
     buildCommand: "uv sync"
-    startCommand: "uv run src/vnstock_mcp/server.py"
+    startCommand: "uv run server.py"
     envVars:
       - key: PORT
         value: 8001
