docs: add .env.example template for configuration reference

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-# Anthropic API key for LLM integration
-ANTHROPIC_API_KEY=your_api_key_here
+# VNStock MCP Server Configuration
+
+# Server port (default: 8080)
+PORT=8080
+
+# Server host (default: 0.0.0.0 for all interfaces)
+MCP_HOST=0.0.0.0
